<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        android:background="@drawable/background">

        <ImageView
            android:layout_width="229dp"
            android:layout_height="223dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/logo" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_username"
        android:importantForAutofill="no"
        style="@style/TextAppearance.AppCompat"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_email"
        style="@style/TextAppearance.AppCompat"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_password"
        style="@style/TextAppearance.AppCompat"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            android:layout_margin="15dp">
    <Button
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_register"
        style="@style/Widget.AppCompat.Button.Colored"/>

        </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="70dp"
        android:text="@string/tv_login"
        android:textColor="@color/White"
        android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>