<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordReset"
    android:orientation="vertical"
    android:background="@drawable/background">

    <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
        app:titleTextColor="@color/White" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        android:padding="50dp"
        android:background="@drawable/background">

    <EditText
        android:id="@+id/et_resetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/et_resetEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        style="@style/TextAppearance.AppCompat"
        android:textColor="@color/White"
        android:textSize="18sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            android:layout_margin="15dp">

    <Button
        android:id="@+id/bt_resetEmail"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/bt_resetEmail"/>

        </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_will_receive_an_email_after_clicking_reset"
        android:layout_marginTop="20dp"
        android:textColor="@color/White"
        android:layout_marginStart="20dp"
        android:textStyle="bold"/>
    </LinearLayout>


</RelativeLayout>